{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 15,
  "lineage": "b4402faf-e358-a1df-dff7-45718474cbf2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328984:internet-gateway/igw-021c1f67ef9599daf",
            "id": "igw-021c1f67ef9599daf",
            "owner_id": "742932328984",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-igw",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-igw",
              "Project": "terraform-challenge"
            },
            "vpc_id": "vpc-09974209dc62e2283"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:742932328984:loadbalancer/app/test-cluster-VF4AGP-alb/64e67dbaf40b662c",
            "arn_suffix": "app/test-cluster-VF4AGP-alb/64e67dbaf40b662c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-cluster-VF4AGP-alb-1405120142.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:742932328984:loadbalancer/app/test-cluster-VF4AGP-alb/64e67dbaf40b662c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-cluster-VF4AGP-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-026e85e8e362cae84"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021caf7f9cf75f651"
              },
              {
                "subnet_id": "subnet-05b57dd34e96c246c"
              }
            ],
            "subnets": [
              "subnet-021caf7f9cf75f651",
              "subnet-05b57dd34e96c246c"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-alb",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-alb",
              "Project": "terraform-challenge"
            },
            "vpc_id": "vpc-09974209dc62e2283",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:742932328984:listener/app/test-cluster-VF4AGP-alb/64e67dbaf40b662c/cd2dfcb0bb1a756c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:742932328984:targetgroup/test-cluster-VF4AGP-tg/b5d4d07b40356de9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:742932328984:listener/app/test-cluster-VF4AGP-alb/64e67dbaf40b662c/cd2dfcb0bb1a756c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:742932328984:loadbalancer/app/test-cluster-VF4AGP-alb/64e67dbaf40b662c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-listener",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-listener",
              "Project": "terraform-challenge"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:742932328984:targetgroup/test-cluster-VF4AGP-tg/b5d4d07b40356de9",
            "arn_suffix": "targetgroup/test-cluster-VF4AGP-tg/b5d4d07b40356de9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:742932328984:targetgroup/test-cluster-VF4AGP-tg/b5d4d07b40356de9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-cluster-VF4AGP-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-tg",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-tg",
              "Project": "terraform-challenge"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09974209dc62e2283"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328984:route-table/rtb-010ea5c5eb532d103",
            "id": "rtb-010ea5c5eb532d103",
            "owner_id": "742932328984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021c1f67ef9599daf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-rt",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-rt",
              "Project": "terraform-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-09974209dc62e2283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b125490fc3c3b82",
            "route_table_id": "rtb-010ea5c5eb532d103",
            "subnet_id": "subnet-05b57dd34e96c246c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04959031f6a75b6c5",
            "route_table_id": "rtb-010ea5c5eb532d103",
            "subnet_id": "subnet-021caf7f9cf75f651"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328984:security-group/sg-026e85e8e362cae84",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026e85e8e362cae84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-cluster-VF4AGP-alb-sg",
            "name_prefix": "",
            "owner_id": "742932328984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-alb-sg",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-alb-sg",
              "Project": "terraform-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-09974209dc62e2283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328984:security-group/sg-04fcc7a401ef81d59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fcc7a401ef81d59",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026e85e8e362cae84"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-cluster-VF4AGP-instance-sg",
            "name_prefix": "",
            "owner_id": "742932328984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-instance-sg",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-instance-sg",
              "Project": "terraform-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-09974209dc62e2283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328984:subnet/subnet-05b57dd34e96c246c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b57dd34e96c246c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742932328984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-subnet-1",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-subnet-1",
              "Project": "terraform-challenge"
            },
            "vpc_id": "vpc-09974209dc62e2283"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328984:subnet/subnet-021caf7f9cf75f651",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021caf7f9cf75f651",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742932328984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-subnet-2",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-subnet-2",
              "Project": "terraform-challenge"
            },
            "vpc_id": "vpc-09974209dc62e2283"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742932328984:vpc/vpc-09974209dc62e2283",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7a30c6aeeb1db68",
            "default_route_table_id": "rtb-0561393e48a9bde0e",
            "default_security_group_id": "sg-0b9dc3e13dee3bac5",
            "dhcp_options_id": "dopt-0dba05e627568afb8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09974209dc62e2283",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0561393e48a9bde0e",
            "owner_id": "742932328984",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-vpc",
              "Project": "terraform-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "test-cluster-VF4AGP-vpc",
              "Project": "terraform-challenge"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}